--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,25 @@
-<h3>I'm in the AppComponent!</h3>
+<div class="container">
+   <div class="row">
+      <div class="col-xs-112">
+         <h3>I'm in the AppComponent!</h3>
+         <hr>
+         <app-servers></app-servers>
+         <!-- <div app-servers></div> -->
+         <!-- <div class="app-servers"></div> -->
+
+         <!-- <hr> -->
+         <!-- <app-warning-alert></app-warning-alert> -->
+         <!-- <app-success-alert></app-success-alert> -->
+
+         <hr>
+         <hr>
+         <!-- <button class="btn btn-primary" (click)="showSecret = !showSecret">Display Details</button> -->
+         <button class="btn btn-primary" (click)="toggleDetails()">Display Details</button>
+         <p *ngIf="showSecret">Secret Password: tuna</p>
+         <div *ngFor="let item of log; let i = index" [ngStyle]="{ 'background-color': i >= 4 ? 'blue': 'transparent' }"
+            [ngClass]="{ 'white-text': i >= 4 }">
+            {{ item }}
+         </div>
+      </div>
+   </div>
+</div>
